# XJTU-RMV-Task05

./: .gitignore  README.md  XJTU-RMV-Task05.code-workspace
$(ALLUSERSPROFILE)/GenICam/xml/cache/: SchemaVersion.1.0@U3V#U3V#MV-CS016-10UC#V2.1.2 220907 884152@XMLVersion.1.0.0.md5
install/: local_setup.sh  setup.sh
install/detect_and_solve/lib/detect_and_solve/: detect_and_solve
install/detect_and_solve/share/ament_index/resource_index/package_run_dependencies/: detect_and_solve
install/detect_and_solve/share/ament_index/resource_index/parent_prefix_path/: detect_and_solve
install/detect_and_solve/share/detect_and_solve/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.sh  package.xml  package.zsh
install/detect_and_solve/share/detect_and_solve/cmake/: detect_and_solveConfig-version.cmake  detect_and_solveConfig.cmake
install/detect_and_solve/share/detect_and_solve/config/: camera.json
install/detect_and_solve/share/detect_and_solve/environment/: ament_prefix_path.dsv  path.dsv
install/hik_camera/lib/hik_camera/: hik_camera_node
install/hik_camera/share/ament_index/resource_index/package_run_dependencies/: hik_camera
install/hik_camera/share/ament_index/resource_index/parent_prefix_path/: hik_camera
install/hik_camera/share/hik_camera/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/hik_camera/share/hik_camera/cmake/: hik_cameraConfig-version.cmake  hik_cameraConfig.cmake
install/hik_camera/share/hik_camera/environment/: ament_prefix_path.dsv  path.dsv
install/hik_camera/share/hik_camera/launch/: launch.py
log/: latest_build
src/detect_and_solve/: CMakeLists.txt  package.xml
src/detect_and_solve/config/: camera.json  camera.yaml  classes.json
src/detect_and_solve/include/detect_and_solve/: model_runtime.hpp  recognition.hpp  util.hpp
src/detect_and_solve/launch/: launch.py
src/detect_and_solve/src/: model_runtime.cpp  node.cpp  recognition.cpp  util.cpp
src/hik_camera/: CMakeLists.txt  package.xml
src/hik_camera/include/hik_camera/: hik_camera_driver.hpp
src/hik_camera/launch/: launch.py
src/hik_camera/src/: hik_camera_driver.cpp  hik_camera_node.cpp
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/install/detect_and_solve/include/detect_and_solve/: recognition.hpp  util.hpp
src/install/detect_and_solve/lib/detect_and_solve/: detect_and_solve
src/install/detect_and_solve/share/ament_index/resource_index/package_run_dependencies/: detect_and_solve
src/install/detect_and_solve/share/ament_index/resource_index/parent_prefix_path/: detect_and_solve
src/install/detect_and_solve/share/detect_and_solve/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh
src/install/detect_and_solve/share/detect_and_solve/cmake/: detect_and_solveConfig-version.cmake  detect_and_solveConfig.cmake
src/install/detect_and_solve/share/detect_and_solve/config/: camera.yaml
src/install/detect_and_solve/share/detect_and_solve/environment/: ament_prefix_path.dsv  path.dsv
src/install/detect_and_solve/share/detect_and_solve/launch/: launch.py
src/install/hik_camera/lib/hik_camera/: hik_camera_node
src/install/hik_camera/share/ament_index/resource_index/package_run_dependencies/: hik_camera
src/install/hik_camera/share/ament_index/resource_index/parent_prefix_path/: hik_camera
src/install/hik_camera/share/hik_camera/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh
src/install/hik_camera/share/hik_camera/cmake/: hik_cameraConfig-version.cmake  hik_cameraConfig.cmake
src/install/hik_camera/share/hik_camera/environment/: ament_prefix_path.dsv  path.dsv
src/log/: latest_build
src/training/: best_model.pth  export_model.py  sort_dataset.py  tiny_lenet.onnx  tiny_lenet.onnx.data  tiny_lenet18.onnx  tiny_lenet18.onnx.data  train.py
