<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>detect_and_solve</name>
  <version>0.1.0</version>
  <description>detect plate armor from camera stream published by hik_camera</description>

  <maintainer email="leo_xia@icloud.com">leoxia</maintainer>
  <license>No License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS2 dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>nlohmann-json3-dev</depend>
  <exec_depend>onnxruntime</exec_depend>


  <!-- OpenCV -->
  <depend>opencv4</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
